# kinfu_remake

./: CMakeLists.txt
apps/: demo.cpp
kfusion/include/kfusion/: types.hpp
kfusion/src/: core.cpp  projective_icp.cpp
kfusion/src/cuda/: device.hpp  imgproc.cu  temp_utils.hpp  texture_binder.hpp  tsdf_volume.cu
kfusion_py/: _kfusion.pyx  kfusion.cpp  kfusion.h  setup.py
